--- a/.github/linters/.htmlhintrc
+++ b/.github/linters/.htmlhintrc
@@ -23,3 +23,9 @@
   "attr-unsafe-chars": true,
   "head-script-disabled": true
 }
+/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
+*/
+.mdl-ripple {
+  background: #000;
+  opacity: 0.001;
+}
